log
Fri 10 Mar 2023 12:06:53 PM UTC: 
 tests:  0|7
total_score: 0/70
414262f
Fri 10 Mar 2023 12:08:01 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:7: error: unused variable ‘aa’ [-Werror=unused-variable]
   17 |   int aa= *b;
      |       ^~
exercises.c:16:7: error: unused variable ‘bb’ [-Werror=unused-variable]
   16 |   int bb= *a;
      |       ^~
cc1: all warnings being treated as errors
Compilation failed
864e5e1
Fri 10 Mar 2023 12:10:57 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
c01c724
